<resources>
    <string name="app_name">My Places</string>

    <string name="google_maps_key">AIzaSyDeknpvjdQ5tUOYqExNiDDHHEKLADyMBps</string>

    <string name="settings">Configuracion</string>

    <string name="closeDrawer" formatted="false">Navigation View</string>
    <string name="openDrawer" formatted="false">Navigation View Closed</string>

    <string name="form_name">Nombre</string>
    <string name="form_paterno">Apellido Paterno</string>
    <string name="form_materno">Apellido Materno</string>
    <string name="form_email">Correo electronico</string>
    <string name="form_password">Contraseña</string>

    <string name="menu_01" formatted="false">Buscar lugares</string>
    <string name="menu_02" formatted="false">Mis favoritos</string>
    <string name="menu_03" formatted="false">Mis datos</string>
    <string name="menu_04" formatted="false">Recomendados</string>
    <string name="menu_08" formatted="false">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="intro_message">
        <![CDATA[

            Busque sus lugares favoritos en nuestra aplicacion.
        ]]>
    </string>

    <string name="selected_place">Lugar elegido:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Id de lugar: %2$s</i>
        <br/>
        Direccion: %3$s
        <br/>
        Telefono: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>

</resources>
