<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu1"
            android:checked="false"
            android:title="@string/menu_01" />

        <item
            android:id="@+id/menu2"
            android:checked="false"
            android:title="@string/menu_02" />

        <item
            android:id="@+id/menu3"
            android:checked="false"
            android:title="@string/menu_03" />
        <item
        android:id="@+id/menu4"
        android:checked="false"
        android:title="@string/menu_04" />

        <item
            android:id="@+id/menu8"
            android:checked="false"
            android:title="@string/menu_08" />


    </group>
</menu>

